# tauri-next-mobile

./: README.md  next.config.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
